@@ -1,12 +1,15 @@
 libremedy-ticket-perl (0.2) intrepid UNRELEASED; urgency=low
 
   * Should actually work.
+  * Put time_spent code back into Ticket.pm and remedy-ticket
+  * Incident.pm now looks for 'assigned_groups' in limit_pre ().
+  * remedy-ticket now can pass 'assigned_groups' properly.
+  * remedy-ticket user searching fixes.
 
  -- Tim Skirvin <tskirvin@stanford.edu>  Thu, 12 Mar 2009 13:30:29 -0700
 
 libremedy-ticket-perl (0.1) intrepid UNRELEASED; urgency=low
 
   * Initial forked version.
-  * i
 
  -- Tim Skirvin <tskirvin@stanford.edu>  Thu, 12 Mar 2009 13:30:17 -0700
